Fix overflow on long links in comments
Closes #16

--- a/src/scss/modules/_feedback.scss
+++ b/src/scss/modules/_feedback.scss
@@ -101,6 +101,10 @@ input[type=radio] {
         display: block;
         margin: 0 0 1rem;
     }
+
+    .content {
+        overflow: hidden;
+    }
 }
 
 .comment_meta {
